<resources>
    <string name="app_name">Assignment 2</string>
    <string name="greeting">Welcome to the Safari Zoo! We are a small zoo located in Safariland, CA. We have a small, private collection of exotic animals.</string>
    <string name="zoo_name">Safari Zoo</string>
    <string name="information">Information</string>
    <string name="back">Back</string>
    <string name="phone">TEL: 888-8888</string>
    <string name="warning">This animal is very scary!\nDo you want to proceed?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="bear">Bear</string>
    <string name="bearDescription">Bears are carnivoran mammals of the family Ursidae. They are classified as caniforms, or doglike carnivorans. Although only eight species of bears are extant, they are widespread, appearing in a wide variety of habitats throughout the Northern Hemisphere and partially in the Southern Hemisphere.</string>
    <string name="lion">Lion</string>
    <string name="lionDescription">The lion (Panthera leo) is a species in the family Felidae and a member of the genus Panthera. It has a muscular, deep-chested body, short, rounded head, round ears, and a hairy tuft at the end of its tail.</string>
    <string name="peacock">Peacock</string>
    <string name="peacockDescription">Peafowl is a common name for three bird species in the genera Pavo and Afropavo of the family Phasianidae, the pheasants and their allies. Male peafowl are referred to as peacocks, and female peafowl as peahens, though peafowl of either sex are often referred to colloquially as "peacocks".</string>
    <string name="penguin">Penguin</string>
    <string name="penguinDescription">Penguins (order Sphenisciformes, family Spheniscidae) are a group of aquatic flightless birds. They live almost exclusively in the Southern Hemisphere, with only one species, the Galápagos penguin, found north of the equator.</string>
    <string name="zebra">Zebra</string>
    <string name="zebraDescription">Zebras (subgenus Hippotigris) are African equines with distinctive black-and-white striped coats. There are three extant species: the Grévy\'s zebra (Equus grevyi), plains zebra (E. quagga) and the mountain zebra (E. zebra). Zebras share the genus Equus with horses and asses, the three groups being the only living members of the family Equidae.</string>
</resources>